@@ -9,6 +9,7 @@ Date: ??????
     - Honking can attract enemies (defaults to off).
     - Train horns are configurable.
   Enhancements:
+    - Selection tools, Blueprints, Blueprint Books, and Deconstruction items are hidden by default.
     - Changed the way notes are saved. Existing notes will get destroyed or lost.
     - Sort Inventory now uses sort_and_merge inventory method.
   Bugfixes:
